--- a/.github/workflows/docker_publish.yml
+++ b/.github/workflows/docker_publish.yml
@@ -59,6 +59,6 @@ jobs:
         push: ${{ github.event_name != 'pull_request' }}
         tags: ${{ env.REGISTRY }}/${{ env.IMAGE_REPOSITORY }}:latest
         labels: ${{ steps.meta.outputs.labels }}
-        platforms: linux/amd64, linux/arm64/v8, linux/arm/v7
+        platforms: linux/amd64, linux/arm64, linux/arm64/v8, linux/arm/v7
         cache-from: type=gha
         cache-to: type=gha,mode=max
